# AnimeDatabase

./: .gitignore  README.md  Specification.md  example.env  pyproject.toml  specifications.md
.github/workflows/: main.yaml  static.yml
database/: core.py  utils.py
requirements/: base.txt
src/: README.md  config.py  constants.py  main.py  routers.py  setup.py  utils.py
src/auth/: api.py  constants.py  router.py  schemas.py  utils.py
src/auth/key_storages/: __init__.py  abc.py  exceptions.py  inmemory.py
src/auth/storages/: __init__.py  abc.py  exceptions.py  inmemory.py
src/config/: __init__.py  db.py  email.py  main.py  redis.py  server.py
src/db/: __init__.py  core.py  exceptions.py  types.py  utils.py
src/info/: constants.py  router.py  utils.py
src/services/: abc.py
src/services/alerts/: __init__.py  email.py  utils.py
src/services/auth/: __init__.py  core.py  types.py
src/services/notification/: __init__.py  abc.py  email.py  messages.py  sign_up_observer.py
src/utils/: __init__.py  templating.py
templates/: index.html  login.html
templates/favicon/: about.txt
templates/static/styles/: main.css
templates/styles/: main.css
